# hw3-seojitongri

./: .gitignore  Makefile  README.md  ai_documentation.txt  myst.yml  pyproject.toml
ligotools/: utils.py
ligotools/tests/: test_readligo.py
